Further changes to html and css

--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 </head>
 <body>
     <header>
-        <div class="topline">
-        <h3>Header Logo</h3>
-        <ul>
-            <li>Header Link 1</li>
-            <li>Header Link 2</li>
-            <li>Header Link 3</li>
-        </ul>
-    </div>
-        <div class="text">
-        <h1>This website is awesome</h1>
-        <p>
-            This is placeholder text for this website. It has important information. Here under main title. Smaller font and lower contrast.
-        </p>
-        </div>
-        <img src="img/delivery.jpg" alt="Delivery person">
-
-        <button>Sign up</button>
+        <nav>
+            <h3>Header Logo</h3>
+            <ul class="nav-link">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </nav>
+        
+        <section class="text-section">
+            <div class="text">
+                <h1>This website is awesome</h1>
+                <p>
+                    This is placeholder text for this website. It has important information. Here under main title. Smaller font and lower contrast.
+                </p>
+                <button>Sign up</button>
+            </div>
+            <img src="img/delivery.jpg" alt="Delivery person">
+        </section>
+       
     </header>
 
     <section class="images">
