Yet more corrections. Life goes on.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400,700;1,300;&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
+
 </head>
 <body>
     <header>
@@ -67,7 +71,7 @@
             </p>
         </blockquote>
         
-        <figcaption>Homer, <cite>The Iliad</cite></figcaption> 
+        <figcaption>- Homer, <cite>The Iliad</cite></figcaption> 
     </section>
 
     <section class="cta">
@@ -76,7 +80,7 @@
     </section>
 
     <footer>
-        copyright 2022 Chris Betts
+        copyright &copy 2022 Chris Betts
     </footer>
 </body>
 </html>
